--- a/day3/find-david.html
+++ b/day3/find-david.html
@@ -11,11 +11,11 @@
     <body>
         <div class="intro">
             <h1>Test Your Reaction</h1>
-             <p>You're in a convention center, and you want to meet
+             <p id="info">You're in a convention center, and you want to meet
                  the doctor! Test your reaction time by trying to find
                  the Tardis amongst the crowd.</p>
             <p class='bold'>Time: <span id='time'>0</span>s &nbsp; &nbsp;Score: <span id='score'>0</span>
-            &nbsp; &nbsp; <span id="button">Stop Game</span></p>
+            <span id="button">Stop Game</span></p>
         </div>
 
         <div id="tardis"></div>
