--- a/day3/find-david.html
+++ b/day3/find-david.html
@@ -16,9 +16,13 @@
                  the Tardis amongst the crowd.</p>
             <p class='bold'>Time: <span id='time'>0</span>s &nbsp; &nbsp;Score: <span id='score'>0</span>
             <span id="button">Stop Game</span></p>
+            <footer>
+                <p>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
+            </footer>
         </div>
 
         <div id="tardis"></div>
+
 
         <script src="js/script.js"></script>
     </body>
