update new link

--- a/day1/default.html
+++ b/day1/default.html
@@ -48,6 +48,7 @@
 
         <section>
             <div class="container">
+                <h3><span class="days"> Day 004 &nbsp;</span><a href="../day4/show-me-the-hex.html">Hex all around</a></h3>
                 <h3><span class="days"> Day 003 &nbsp;</span><a href="../day3/find-david.html">Find the Tardis</a></h3>
                 <h3><span class="days"> Day 002 &nbsp;</span><a href="../day2/weapon.html">Choose your weapon</a></h3>
                 <h3><span class="days"> Day 001 &nbsp;</span><a href="default.html">Home page</a></h3>
