--- a/day4/show-me-the-hex.html
+++ b/day4/show-me-the-hex.html
@@ -32,7 +32,9 @@
             </div>
             <h2>exadecimal</h2>
         </div>
-
+        <footer>
+            <p>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
+        </footer>
         <script type="text/javascript" src="js/script.js"></script>
     </body>
 </html>
