--- a/day1/default.html
+++ b/day1/default.html
@@ -48,6 +48,7 @@
 
         <section>
             <div class="container">
+                <h3><span class="days"> Day 006 &nbsp;</span><a href="../day6/time-me.html">Time me</a></h3>
                 <h3><span class="days"> Day 005 &nbsp;</span><a href="../day5/face.html">Crazy eyes</a></h3>
                 <h3><span class="days"> Day 004 &nbsp;</span><a href="../day4/show-me-the-hex.html">Hex all around</a></h3>
                 <h3><span class="days"> Day 003 &nbsp;</span><a href="../day3/find-david.html">Find the Tardis</a></h3>
