Trying to fix days 5 project

--- a/day5/face.html
+++ b/day5/face.html
@@ -6,6 +6,7 @@
         <title> crazy eyes</title>
 
         <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+        <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/main.css">
 
         <script type="text/javascript" src="js/jquery.js"></script>
@@ -13,10 +14,6 @@
     <body>
         <div class="the-face">
             <div class="eyes">
-                <footer>
-                    <p id="note">Only works on a 1450px wide screen</p>
-                    <p>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
-                </footer>
                 <span id="left-eye">
                     <img src="img/eyes.svg" alt="" />
                 </span>
@@ -25,6 +22,11 @@
                 </span>
             </div>
         </div>
+
+        <footer>
+            <p id="note">Only works on a 1353px wide screen</p>
+            <p>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
+        </footer>
 
         <script type="text/javascript" src="js/script.js"></script>
     </body>
