--- a/day1/default.html
+++ b/day1/default.html
@@ -48,6 +48,7 @@
 
         <section>
             <div class="container">
+                <h3><span class="days"> Day 009 &nbsp;</span><a href="../day9/index.html">Breakout</a></h3>
                 <h3><span class="days"> Day 008 &nbsp;</span><a href="../day8/index.html">Lost Bit</a></h3>
                 <h3><span class="days"> Day 007 &nbsp;</span><a href="../day7/heros.html">Heroes of mine</a></h3>
                 <h3><span class="days"> Day 006 &nbsp;</span><a href="../day6/time-me.html">Time me</a></h3>
