--- a/day1/default.html
+++ b/day1/default.html
@@ -49,6 +49,7 @@
         <section>
             <div class="container">
                 <h3><span class="days"> Day 011 &nbsp;</span><a href="../day11/index.html">Lost Bit Game</a></h3>
+                <h3><span class="days"> Day 009.5 &nbsp;</span><a href="../day9.5/index.html">Breakout 1.5</a></h3>
                 <h3><span class="days"> Day 009 &nbsp;</span><a href="../day9/index.html">Breakout</a></h3>
                 <h3><span class="days"> Day 008 &nbsp;</span><a href="../day8/index.html">Lost Bit Trailer</a></h3>
                 <h3><span class="days"> Day 007 &nbsp;</span><a href="../day7/heros.html">Heroes of mine</a></h3>
