--- a/day9.5/index.html
+++ b/day9.5/index.html
@@ -9,6 +9,9 @@
                 padding: 0;
                 margin: 0;
             }
+            body {
+                background-color: #d3d3d3;
+            }
 
             canvas {
                 border-left: 2px solid #d3d3d3;
