--- a/day1/default.html
+++ b/day1/default.html
@@ -48,7 +48,10 @@
 
         <section>
             <div class="container">
+                <h3><span class="days"> Day 013 &nbsp;</span><a href="../day13/index.html">Tesla VS Edison</a></h3>
+                <h3><span class="days"> Day 012 &nbsp;</span><a href="../day12/index.html">Digital Clock</a></h3>
                 <h3><span class="days"> Day 011 &nbsp;</span><a href="../day11/index.html">Lost Bit Game</a></h3>
+                <h3><span class="days"> Day 010 &nbsp;</span><a href="../day10/index.html">Brain Overload</a></h3>
                 <h3><span class="days"> Day 009.5 &nbsp;</span><a href="../day9.5/index.html">Breakout 1.5</a></h3>
                 <h3><span class="days"> Day 009 &nbsp;</span><a href="../day9/index.html">Breakout</a></h3>
                 <h3><span class="days"> Day 008 &nbsp;</span><a href="../day8/index.html">Lost Bit Trailer</a></h3>
