--- a/day10/index.html
+++ b/day10/index.html
@@ -2,64 +2,22 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Disco Lights</title>
+        <title>BRAIN OVERLOAD</title>
+        <link rel="stylesheet" href="css/main.css">
 
-        <script type="text/javascript">
-            var colors = ['#007fff', '#f0ffff', '#89cff0'];
-            var curretnColor = 0;
 
-            function dicoLights() {
-                // var bodydoc = document.getElementsByTagName('BODY')[0];
-                if (document.getElementsByTagName('BODY')[0].style.backgroundColor == '#007fff'){
-                    document.getElementsByTagName('BODY')[0].style.backgroundColor = '#f0ffff';
-                    console.log('im in if');
-                } else{
-                    document.getElementsByTagName('BODY')[0].style.backgroundColor = '#007fff';
-                    console.log('im in else');
-                }
-            }
-
-            function changeColor() {
-                inter = window.setInterval(dicoLights, 1000);
-            }
-
-        </script>
     </head>
-    <body onload="changeColor()">
+    <body>
 
+        <div id="changeMe">
+            <footer>
+                <p>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
+            </footer>
+            <img src="img/brain.svg" alt="brain" />
+            <h1 id ='text'>BRAIN OVERLOAD</h1>
+        </div>
+
+        <script type="text/javascript" src="js/script.js"></script>
 
     </body>
 </html>
-
-<!-- <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8" />
-  <title>setInterval/clearInterval example</title>
-
-  <script>
-    var nIntervId;
-
-    function changeColor() {
-      nIntervId = setInterval(flashText, 1000);
-    }
-
-    function flashText() {
-      var oElem = document.getElementById("my_box");
-      oElem.style.color = oElem.style.color == "red" ? "blue" : "red";
-    }
-
-    function stopTextColor() {
-      clearInterval(nIntervId);
-    }
-  </script>
-</head>
-
-<body onload="changeColor();">
-  <div id="my_box">
-    <p>Hello World</p>
-  </div>
-
-  <button onclick="stopTextColor();">Stop</button>
-</body>
-</html> -->
