--- a/day1/about.html
+++ b/day1/about.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+        <!-- <meta name="viewport" content="initial-scale=1, maximum-scale=1"> -->
         <title>Athoug's 180 days challenge</title>
 
         <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
