--- a/day15/index.html
+++ b/day15/index.html
@@ -30,6 +30,10 @@
             </div>
         </div>
 
+        <footer>
+            <p>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
+        </footer>
+        
         <script type="text/javascript" src='js/script.js'></script>
 
     </body>
