--- a/day1/default.html
+++ b/day1/default.html
@@ -48,6 +48,7 @@
 
         <section>
             <div class="container">
+                <h3><span class="days"> Day 016 &nbsp;</span><a href="../day16/index.html">Calculator</a></h3>
                 <h3><span class="days"> Day 015 &nbsp;</span><a href="../day15/index.html">Countdown</a></h3>
                 <h3><span class="days"> Day 014 &nbsp;</span><a href="../day14/flip.html">Flip Cion</a></h3>
                 <h3><span class="days"> Day 013 &nbsp;</span><a href="../day13/index.html">Tesla VS Edison</a></h3>
