--- a/day14/flip.html
+++ b/day14/flip.html
@@ -17,7 +17,9 @@
             <button type="button" name="button" onclick="flip('coinFlipF', 'coinFlipB')">FLIP COIN</button>
         </div>
 
-
+        <footer>
+            <p>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
+        </footer>
         <script type="text/javascript" src='js/script.js'></script>
     </body>
 </html>
