--- a/day1/default.html
+++ b/day1/default.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <!-- <meta name="viewport" content="initial-scale=1, maximum-scale=1"> -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Athoug's 180 days challenge</title>
 
         <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
@@ -48,6 +48,7 @@
 
         <section>
             <div class="container">
+                <h3><span class="days"> Day 017 &nbsp;</span><a href="../day17/index.html">Pixel Draw</a></h3>
                 <h3><span class="days"> Day 016 &nbsp;</span><a href="../day16/index.html">Calculator</a></h3>
                 <h3><span class="days"> Day 015 &nbsp;</span><a href="../day15/index.html">Countdown</a></h3>
                 <h3><span class="days"> Day 014 &nbsp;</span><a href="../day14/flip.html">Flip Cion</a></h3>
