--- a/day1/default.html
+++ b/day1/default.html
@@ -24,6 +24,7 @@
         <meta name="theme-color" content="#ffffff">
 
         <link href='https://fonts.googleapis.com/css?family=Yantramanav:400,100,500|Raleway+Dots' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Quicksand:400,700,300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/responsive.css">
     </head>
@@ -48,6 +49,7 @@
 
         <section>
             <div class="container">
+                <h3><span class="days"> Day 018 &nbsp;</span><a href="../day18/index.html">Bubbles Everywhere</a></h3>
                 <h3><span class="days"> Day 017 &nbsp;</span><a href="../day17/index.html">Pixel Draw</a></h3>
                 <h3><span class="days"> Day 016 &nbsp;</span><a href="../day16/index.html">Calculator</a></h3>
                 <h3><span class="days"> Day 015 &nbsp;</span><a href="../day15/index.html">Countdown</a></h3>
