--- a/day1/about.html
+++ b/day1/about.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <!-- <meta name="viewport" content="initial-scale=1, maximum-scale=1"> -->
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
         <title>Athoug's 180 days challenge</title>
 
         <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
@@ -25,6 +25,7 @@
 
 
         <link href='https://fonts.googleapis.com/css?family=Yantramanav:400,100,500|Raleway+Dots' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Quicksand:400,700,300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/responsive.css">
     </head>
