--- a/day16/index.html
+++ b/day16/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Calculator</title>
 
         <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
@@ -135,7 +136,7 @@
         <footer>
             <p>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
         </footer>
-        
+
         <script type="text/javascript" src="js/script.js"></script>
 
     </body>
