--- a/day1/default.html
+++ b/day1/default.html
@@ -49,6 +49,10 @@
 
         <section>
             <div class="container">
+                <h3><span class="days"> Day 022 &nbsp;</span><a href="../day22/index.html">Draw Something 2</a></h3>
+                <h3><span class="days"> Day 021 &nbsp;</span><a href="../day21/index.html">Draw Something</a></h3>
+                <h3><span class="days"> Day 020 &nbsp;</span><a href="../day20/index.html">Pixels Generator</a></h3>
+                <h3><span class="days"> Day 019 &nbsp;</span><a href="../day19/index.html">To-Do List</a></h3>
                 <h3><span class="days"> Day 018 &nbsp;</span><a href="../day18/index.html">Bubbles Everywhere</a></h3>
                 <h3><span class="days"> Day 017 &nbsp;</span><a href="../day17/index.html">Pixel Draw</a></h3>
                 <h3><span class="days"> Day 016 &nbsp;</span><a href="../day16/index.html">Calculator</a></h3>
