--- a/day1/default.html
+++ b/day1/default.html
@@ -49,6 +49,9 @@
 
         <section>
             <div class="container">
+                <h3><span class="days"> Day 025 &nbsp;</span><a href="../day25/index.html">Happy/Sad</a></h3>
+                <h3><span class="days"> Day 024 &nbsp;</span><a href="../day24/index.html">ColoredBit</a></h3>
+                <h3><span class="days"> Day 023 &nbsp;</span><a href="../day23/index.html">Synthesizer</a></h3>
                 <h3><span class="days"> Day 022 &nbsp;</span><a href="../day22/index.html">Draw Something 2</a></h3>
                 <h3><span class="days"> Day 021 &nbsp;</span><a href="../day21/index.html">Draw Something</a></h3>
                 <h3><span class="days"> Day 020 &nbsp;</span><a href="../day20/index.html">Pixels Generator</a></h3>
