Day 26 and day 27

--- a/day1/default.html
+++ b/day1/default.html
@@ -49,6 +49,8 @@
 
         <section>
             <div class="container">
+                <h3><span class="days"> Day 027 &nbsp;</span><a href="../day27/index.html">Position Me This</a></h3>
+                <h3><span class="days"> Day 026 &nbsp;</span><a href="../day26/index.html">Snake</a></h3>
                 <h3><span class="days"> Day 025 &nbsp;</span><a href="../day25/index.html">Happy/Sad</a></h3>
                 <h3><span class="days"> Day 024 &nbsp;</span><a href="../day24/index.html">ColoredBit</a></h3>
                 <h3><span class="days"> Day 023 &nbsp;</span><a href="../day23/index.html">Synthesizer</a></h3>
