--- a/day26/index.html
+++ b/day26/index.html
@@ -2,16 +2,25 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Parallax tutorial</title>
+        <title>Snake</title>
+        
+        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/master.css">
-        <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
-        <div id="para_lyr_1">
-
+        <div class="container">
+            <h1 class="title">SNAKE</h1>
+            <h2>SCORE: <span id='score'></span></h2>
         </div>
-        <div id="content_layer">
+        <canvas id="canvas" width="700" height="500"></canvas>
 
-        </div>
+        <footer>
+            <p>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
+        </footer>
+
+        <!-- Jquery -->
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+        <script type="text/javascript" src='js/script.js'></script>
     </body>
 </html>
