--- a/day28/index.html
+++ b/day28/index.html
@@ -2,16 +2,20 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Parallax tutorial</title>
+        <title>pong</title>
+
+        <link href='https://fonts.googleapis.com/css?family=Gudea:400,700' rel='stylesheet' type='text/css'>
+        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
         <link rel="stylesheet" href="css/master.css">
-        <script type="text/javascript" src="js/script.js"></script>
+        <script type="text/javascript" src='js/script.js'></script>
     </head>
     <body>
-        <div id="para_lyr_1">
-
+        <div class="scores">
+            <p id='player'>0</p>
+            <p id='cmp'>0</p>
         </div>
-        <div id="content_layer">
-
-        </div>
+        <footer>
+            <p>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
+        </footer>
     </body>
 </html>
