--- a/day1/default.html
+++ b/day1/default.html
@@ -49,6 +49,7 @@
 
         <section>
             <div class="container">
+                <h3><span class="days"> Day 029 &nbsp;</span><a href="../day29/index.html">Animated Logo</a></h3>
                 <h3><span class="days"> Day 028 &nbsp;</span><a href="../day28/index.html">Pong</a></h3>
                 <h3><span class="days"> Day 027 &nbsp;</span><a href="../day27/index.html">Position Me This</a></h3>
                 <h3><span class="days"> Day 026 &nbsp;</span><a href="../day26/index.html">Snake</a></h3>
