--- a/day29/index.html
+++ b/day29/index.html
@@ -2,16 +2,51 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Parallax tutorial</title>
+        <title>Animated logo</title>
         <link rel="stylesheet" href="css/master.css">
-        <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
-        <div id="para_lyr_1">
-
+        <div class='wrapper'>
+          <div class='content move left_box'>
+            <div class='boxes_1'></div>
+            <div class='boxes_2'></div>
+            <div class='boxes_3'></div>
+            <div class='boxes_4'></div>
+            <div class='boxes_5'></div>
+            <div class='boxes_6'></div>
+            <div class='boxes_7'></div>
+            <div class='boxes_8'></div>
+            <div class='boxes_9'></div>
+            <div class='boxes_10'></div>
+            <div class='boxes_11'></div>
+            <div class='boxes_12'></div>
+            <div class='boxes_13'></div>
+            <div class='boxes_14'></div>
+          </div>
+          <div class='content text'>
+            <h1>Colored</h1>
+            <h1>.Bit</h1>
+          </div>
+          <div class='content move right_box'>
+            <div class='boxes_14'></div>
+            <div class='boxes_13'></div>
+            <div class='boxes_12'></div>
+            <div class='boxes_11'></div>
+            <div class='boxes_10'></div>
+            <div class='boxes_9'></div>
+            <div class='boxes_8'></div>
+            <div class='boxes_7'></div>
+            <div class='boxes_6'></div>
+            <div class='boxes_5'></div>
+            <div class='boxes_4'></div>
+            <div class='boxes_3'></div>
+            <div class='boxes_2'></div>
+            <div class='boxes_1'></div>
+          </div>
         </div>
-        <div id="content_layer">
 
-        </div>
+        <footer>
+            <p>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
+        </footer>
     </body>
 </html>
