--- a/day30/index.html
+++ b/day30/index.html
@@ -2,16 +2,41 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Parallax tutorial</title>
+        <title>Sputnik</title>
+
+        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
         <link rel="stylesheet" href="css/master.css">
-        <script type="text/javascript" src="js/script.js"></script>
+        <script type="text/javascript" src='js/script.js'></script>
     </head>
     <body>
-        <div id="para_lyr_1">
-
+        <div class="title">
+            <h1>SPUTNIK</h1>
+            <h6>10.04.1957</h6>
+            <h3>FIRST IN SPACE</h3>
         </div>
-        <div id="content_layer">
+        <div class="star"></div>
 
+        <div class="moon">
+            <div class="moon-bumps"></div>
+            <div class="moon-bumps two">
+                <div class="circle"></div>
+            </div>
+            <div class="moon-bumps three"></div>
         </div>
+
+        <div class="container">
+            <div class="sput-body">
+                <span class="sput-window">&bullet;</span>
+                <span class="sput-window">&bullet;</span>
+                <span class="sput-window">&bullet;</span>
+                <div class="sput-stripe"></div>
+            </div>
+            <div class="sput-top-tail"></div>
+            <div class="sput-middle-tail"></div>
+            <div class="sput-bottom-tail"></div>
+        </div>
+        <footer>
+            <p>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
+        </footer>
     </body>
 </html>
