--- a/day1/about.html
+++ b/day1/about.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Athoug's 180 days challenge</title>
 
         <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
@@ -45,9 +45,9 @@
 
             <nav>
                 <ul>
-                    <li id='about'><a href="default.html">home</a></li>
-                    <li id='github'><a href="https://github.com/athoug" target="_blank">github</a></li>
-                    <li id='email'><a href="mailto:athoug.s@gmail.com">contact</a></li>
+                    <li id='about'><a href="default.html" class="underline_from_center">home</a></li>
+                    <li id='github'><a href="https://github.com/athoug" class="underline_from_center" target="_blank">github</a></li>
+                    <li id='email'><a href="mailto:athoug.s@gmail.com" class="underline_from_center">contact</a></li>
                 </ul>
             </nav>
 
@@ -66,10 +66,10 @@
                     and you start thinking damn this is one hell of a long ride in witch I don't think I can keep up.
                     On another boring evening, witch turned into a turning point, I stumbled across a Quora answer. Another human
                     had the same question I had before in regards to becoming a better developer in witch a lovely human answered by 'Just start developing'.
-                    His response wasn't the key, but the example he had, witch was <span><a href="https://jenniferdewalt.com/index.html" target="_blank">Jennifer Dewalt's</a></span> 180 website project. It was inspiring seeing her progress, and
+                    His response wasn't the key, but the example he had, witch was <span><a href="https://jenniferdewalt.com/index.html" target="_blank" data-linktext="Jennifer Dewalt's" class="slide_from_left">Jennifer Dewalt's</a></span> 180 website project. It was inspiring seeing her progress, and
                     how she taught her self to code. It made me want to start my own journey. So here I am aiming to develop 180 websites in 180 days [hopefully]
                     So welcome to my journey!</h3>
-                    <h3>You can follow my musings through tring to develope in my <span><a href="http://athougcodesatnight.tumblr.com/" target="_blank">blog</a>.</span></h3>
+                    <h3>You can follow my musings through tring to develope in my <span><a href="http://athougcodesatnight.tumblr.com/" target="_blank" data-linktext="blog" class="slide_from_left">blog</a>.</span></h3>
                 </div>
 
             </div>
