--- a/day1/default.html
+++ b/day1/default.html
@@ -44,9 +44,9 @@
 
             <nav>
                 <ul>
-                    <li id='about'><a href="about.html">about</a></li>
-                    <li id='github'><a href="https://github.com/athoug" target="_blank">github</a></li>
-                    <li id='email'><a href="mailto:athoug.s@gmail.com">contact</a></li>
+                    <li id='about'><a href="about.html" class="underline_from_center">about</a></li>
+                    <li id='github'><a href="https://github.com/athoug" target="_blank" class="underline_from_center">github</a></li>
+                    <li id='email'><a href="mailto:athoug.s@gmail.com" class="underline_from_center">contact</a></li>
                 </ul>
             </nav>
 
@@ -60,41 +60,43 @@
 
         <section>
             <div class="container">
-                <h3><span class="days"> Day 034 &nbsp;</span><a href="../day34/index.html">Arduino Simulator 3</a></h3>
-                <h3><span class="days"> Day 033 &nbsp;</span><a href="../day33/index.html">Arduino Simulator 2</a></h3>
-                <h3><span class="days"> Day 032 &nbsp;</span><a href="../day32/index.html">Arduino Simulator 1</a></h3>
-                <h3><span class="days"> Day 031 &nbsp;</span><a href="../day31/index.html">Text to [B]inary</a></h3>
-                <h3><span class="days"> Day 030 &nbsp;</span><a href="../day30/index.html">Sputnik</a></h3>
-                <h3><span class="days"> Day 029 &nbsp;</span><a href="../day29/index.html">Animated Logo</a></h3>
-                <h3><span class="days"> Day 028 &nbsp;</span><a href="../day28/index.html">Pong</a></h3>
-                <h3><span class="days"> Day 027 &nbsp;</span><a href="../day27/index.html">Position Me This</a></h3>
-                <h3><span class="days"> Day 026 &nbsp;</span><a href="../day26/index.html">Snake</a></h3>
-                <h3><span class="days"> Day 025 &nbsp;</span><a href="../day25/index.html">Happy/Sad</a></h3>
-                <h3><span class="days"> Day 024 &nbsp;</span><a href="../day24/index.html">ColoredBit</a></h3>
-                <h3><span class="days"> Day 023 &nbsp;</span><a href="../day23/index.html">Synthesizer</a></h3>
-                <h3><span class="days"> Day 022 &nbsp;</span><a href="../day22/index.html">Draw Something 2</a></h3>
-                <h3><span class="days"> Day 021 &nbsp;</span><a href="../day21/index.html">Draw Something</a></h3>
-                <h3><span class="days"> Day 020 &nbsp;</span><a href="../day20/index.html">Pixels Generator</a></h3>
-                <h3><span class="days"> Day 019 &nbsp;</span><a href="../day19/index.html">To-Do List</a></h3>
-                <h3><span class="days"> Day 018 &nbsp;</span><a href="../day18/index.html">Bubbles Everywhere</a></h3>
-                <h3><span class="days"> Day 017 &nbsp;</span><a href="../day17/index.html">Pixel Draw</a></h3>
-                <h3><span class="days"> Day 016 &nbsp;</span><a href="../day16/index.html">Calculator</a></h3>
-                <h3><span class="days"> Day 015 &nbsp;</span><a href="../day15/index.html">Countdown</a></h3>
-                <h3><span class="days"> Day 014 &nbsp;</span><a href="../day14/flip.html">Flip Cion</a></h3>
-                <h3><span class="days"> Day 013 &nbsp;</span><a href="../day13/index.html">Tesla VS Edison</a></h3>
-                <h3><span class="days"> Day 012 &nbsp;</span><a href="../day12/index.html">Digital Clock</a></h3>
-                <h3><span class="days"> Day 011 &nbsp;</span><a href="../day11/index.html">Lost Bit Game</a></h3>
-                <h3><span class="days"> Day 010 &nbsp;</span><a href="../day10/index.html">Brain Overload</a></h3>
-                <h3><span class="days"> Day 009.5 &nbsp;</span><a href="../day9.5/index.html">Breakout 1.5</a></h3>
-                <h3><span class="days"> Day 009 &nbsp;</span><a href="../day9/index.html">Breakout</a></h3>
-                <h3><span class="days"> Day 008 &nbsp;</span><a href="../day8/index.html">Lost Bit Trailer</a></h3>
-                <h3><span class="days"> Day 007 &nbsp;</span><a href="../day7/heros.html">Heroes of mine</a></h3>
-                <h3><span class="days"> Day 006 &nbsp;</span><a href="../day6/time-me.html">Time me</a></h3>
-                <h3><span class="days"> Day 005 &nbsp;</span><a href="../day5/face.html">Crazy eyes</a></h3>
-                <h3><span class="days"> Day 004 &nbsp;</span><a href="../day4/show-me-the-hex.html">Hex all around</a></h3>
-                <h3><span class="days"> Day 003 &nbsp;</span><a href="../day3/find-david.html">Find the Tardis</a></h3>
-                <h3><span class="days"> Day 002 &nbsp;</span><a href="../day2/weapon.html">Choose your weapon</a></h3>
-                <h3><span class="days"> Day 001 &nbsp;</span><a href="default.html">Home page</a></h3>
+                <h3><span class="days"> Day 036 &nbsp;</span><a href="../day36/index.html" data-linktext="Motivation" class="slide_from_bottom">Motivation</a></h3>
+                <h3><span class="days"> Day 035 &nbsp;</span><a href="../day35/index.html" data-linktext="Ripples 1" class="slide_from_bottom">Ripples 1</a>, <a href="../day35/ripple.html"data-linktext="Ripples 2" class="slide_from_bottom">Ripples 2</a></h3>
+                <h3><span class="days"> Day 034 &nbsp;</span><a href="../day34/index.html" data-linktext="Arduino Simulator 3" class="slide_from_bottom">Arduino Simulator 3</a></h3>
+                <h3><span class="days"> Day 033 &nbsp;</span><a href="../day33/index.html" data-linktext="Arduino Simulator 2" class="slide_from_bottom">Arduino Simulator 2</a></h3>
+                <h3><span class="days"> Day 032 &nbsp;</span><a href="../day32/index.html" data-linktext="Arduino Simulator 1" class="slide_from_bottom">Arduino Simulator 1</a></h3>
+                <h3><span class="days"> Day 031 &nbsp;</span><a href="../day31/index.html" data-linktext="Text to [B]inary" class="slide_from_bottom">Text to [B]inary</a></h3>
+                <h3><span class="days"> Day 030 &nbsp;</span><a href="../day30/index.html" data-linktext="Sputnik" class="slide_from_bottom">Sputnik</a></h3>
+                <h3><span class="days"> Day 029 &nbsp;</span><a href="../day29/index.html" data-linktext="Animated Logo" class="slide_from_bottom">Animated Logo</a></h3>
+                <h3><span class="days"> Day 028 &nbsp;</span><a href="../day28/index.html" data-linktext="Pong" class="slide_from_bottom">Pong</a></h3>
+                <h3><span class="days"> Day 027 &nbsp;</span><a href="../day27/index.html" data-linktext="Position Me This" class="slide_from_bottom">Position Me This</a></h3>
+                <h3><span class="days"> Day 026 &nbsp;</span><a href="../day26/index.html" data-linktext="Snake" class="slide_from_bottom">Snake</a></h3>
+                <h3><span class="days"> Day 025 &nbsp;</span><a href="../day25/index.html" data-linktext="Happy/Sad" class="slide_from_bottom">Happy/Sad</a></h3>
+                <h3><span class="days"> Day 024 &nbsp;</span><a href="../day24/index.html" data-linktext="ColoredBit" class="slide_from_bottom">ColoredBit</a></h3>
+                <h3><span class="days"> Day 023 &nbsp;</span><a href="../day23/index.html" data-linktext="Synthesizer" class="slide_from_bottom">Synthesizer</a></h3>
+                <h3><span class="days"> Day 022 &nbsp;</span><a href="../day22/index.html" data-linktext="Draw Something 2" class="slide_from_bottom">Draw Something 2</a></h3>
+                <h3><span class="days"> Day 021 &nbsp;</span><a href="../day21/index.html" data-linktext="Draw Something" class="slide_from_bottom">Draw Something</a></h3>
+                <h3><span class="days"> Day 020 &nbsp;</span><a href="../day20/index.html" data-linktext="Pixels Generator" class="slide_from_bottom">Pixels Generator</a></h3>
+                <h3><span class="days"> Day 019 &nbsp;</span><a href="../day19/index.html" data-linktext="To-Do List" class="slide_from_bottom">To-Do List</a></h3>
+                <h3><span class="days"> Day 018 &nbsp;</span><a href="../day18/index.html" data-linktext="Bubbles Everywhere" class="slide_from_bottom">Bubbles Everywhere</a></h3>
+                <h3><span class="days"> Day 017 &nbsp;</span><a href="../day17/index.html" data-linktext="Pixel Draw" class="slide_from_bottom">Pixel Draw</a></h3>
+                <h3><span class="days"> Day 016 &nbsp;</span><a href="../day16/index.html" data-linktext="Calculator" class="slide_from_bottom">Calculator</a></h3>
+                <h3><span class="days"> Day 015 &nbsp;</span><a href="../day15/index.html" data-linktext="Countdown" class="slide_from_bottom">Countdown</a></h3>
+                <h3><span class="days"> Day 014 &nbsp;</span><a href="../day14/flip.html" data-linktext="Flip Cion" class="slide_from_bottom">Flip Cion</a></h3>
+                <h3><span class="days"> Day 013 &nbsp;</span><a href="../day13/index.html" data-linktext="Tesla VS Edison" class="slide_from_bottom">Tesla VS Edison</a></h3>
+                <h3><span class="days"> Day 012 &nbsp;</span><a href="../day12/index.html" data-linktext="Digital Clock" class="slide_from_bottom">Digital Clock</a></h3>
+                <h3><span class="days"> Day 011 &nbsp;</span><a href="../day11/index.html" data-linktext="Lost Bit Game" class="slide_from_bottom">Lost Bit Game</a></h3>
+                <h3><span class="days"> Day 010 &nbsp;</span><a href="../day10/index.html" data-linktext="Brain Overload" class="slide_from_bottom">Brain Overload</a></h3>
+                <h3><span class="days"> Day 009.5 &nbsp;</span><a href="../day9.5/index.html" data-linktext="Breakout 1.5" class="slide_from_bottom">Breakout 1.5</a></h3>
+                <h3><span class="days"> Day 009 &nbsp;</span><a href="../day9/index.html" data-linktext="Breakout" class="slide_from_bottom">Breakout</a></h3>
+                <h3><span class="days"> Day 008 &nbsp;</span><a href="../day8/index.html" data-linktext="Lost Bit Trailer" class="slide_from_bottom">Lost Bit Trailer</a></h3>
+                <h3><span class="days"> Day 007 &nbsp;</span><a href="../day7/heros.html" data-linktext="Heroes of mine" class="slide_from_bottom">Heroes of mine</a></h3>
+                <h3><span class="days"> Day 006 &nbsp;</span><a href="../day6/time-me.html" data-linktext="Time me" class="slide_from_bottom">Time me</a></h3>
+                <h3><span class="days"> Day 005 &nbsp;</span><a href="../day5/face.html" data-linktext="Crazy eyes" class="slide_from_bottom">Crazy eyes</a></h3>
+                <h3><span class="days"> Day 004 &nbsp;</span><a href="../day4/show-me-the-hex.html" data-linktext="Hex all around" class="slide_from_bottom">Hex all around</a></h3>
+                <h3><span class="days"> Day 003 &nbsp;</span><a href="../day3/find-david.html" data-linktext="Find the Tardis" class="slide_from_bottom">Find the Tardis</a></h3>
+                <h3><span class="days"> Day 002 &nbsp;</span><a href="../day2/weapon.html" data-linktext="Choose your weapon" class="slide_from_bottom">Choose your weapon</a></h3>
+                <h3><span class="days"> Day 001 &nbsp;</span><a href="default.html" data-linktext="Home page" class="slide_from_bottom">Home page</a></h3>
 
             </div>
         </section>
