--- a/day25/index.html
+++ b/day25/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Happy/Sad</title>
 
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,900' rel='stylesheet' type='text/css'>
@@ -25,7 +26,7 @@
             <div class="eyes" id='leftEye'></div>
             <div class="eyes" id='rightEye'></div>
             <div class="mouth">
-                <p class='mouth-size up' id=frown></p>
+                <p class='mouth-size up' id=frown>&#9181;</p>
             </div>
         </div>
 
