--- a/day30/index.html
+++ b/day30/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <title>Sputnik</title>
 
         <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
