--- a/day36/index.html
+++ b/day36/index.html
@@ -2,17 +2,27 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
-        <script type="text/javascript" src="quotes.js"></script>
-        <script type="text/javascript" src="script.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <title>Motivation</title>
+        <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+        <link rel="stylesheet" href="css/master.css">
+
+        <script type="text/javascript" src="js/quotes.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
-        <br>
-        <div class="quoteBlock" id="quote">
+        <div class="quoteBlock">
+            <div id="quote">
+                Click the button to get motivated
+            </div>
+            <button type="button" id="button">Generate Quote</button>
 
         </div>
-        <br>
-        <button type="button" id="button">Generate Quote</button>
 
+        <footer id='foot'>
+            <p id='footp'>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/" id='foota2'>blog</a></p>
+        </footer>
     </body>
 </html>
