--- a/day1/default.html
+++ b/day1/default.html
@@ -60,6 +60,7 @@
 
         <section>
             <div class="container">
+                <h3><span class="days"> Day 037 &nbsp;</span><a href="../day37/index.html" data-linktext="meh" class="slide_from_bottom">meh</a></h3>
                 <h3><span class="days"> Day 036 &nbsp;</span><a href="../day36/index.html" data-linktext="Motivation" class="slide_from_bottom">Motivation</a></h3>
                 <h3><span class="days"> Day 035 &nbsp;</span><a href="../day35/index.html" data-linktext="Ripples 1" class="slide_from_bottom">Ripples 1</a>, <a href="../day35/ripple.html"data-linktext="Ripples 2" class="slide_from_bottom">Ripples 2</a></h3>
                 <h3><span class="days"> Day 034 &nbsp;</span><a href="../day34/index.html" data-linktext="Arduino Simulator 3" class="slide_from_bottom">Arduino Simulator 3</a></h3>
