--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -12,20 +12,22 @@
   <body>
 
     <div class="container">
-      <div class="box">X</div>
       <div class="box"></div>
       <div class="box"></div>
-
-      <div class="box"></div>
-      <div class="box" style="color:#CAC6C3">O</div>
       <div class="box"></div>
 
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
+
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+
+      <div id="cross"></div>
     </div>
 
-    <!-- <hr class="cross"> -->
+
 
     <footer id='foot'>
         <p id='footp'>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/" id='foota2'>blog</a></p>
