Add libraries and and just date in files

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 
             <nav>
                 <ul>
-                    <li id='about'><a href="index.html" class="underline_from_center">home</a></li>
+                    <li id='about'><a href="default.html" class="underline_from_center">home</a></li>
                     <li id='github'><a href="https://github.com/athoug" class="underline_from_center" target="_blank">github</a></li>
                     <li id='email'><a href="mailto:athoug.s@gmail.com" class="underline_from_center">contact</a></li>
                 </ul>
@@ -76,7 +76,9 @@
         </section>
 
         <footer>
-            <p>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
+            <p>Athoug Alsougayer &copy; <span class="date">2016</span> &nbsp; &nbsp;&nbsp; &nbsp;<a href="default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
         </footer>
+
+          <script type="text/javascript" src="js/script.js"></script>
     </body>
 </html>
