--- a/default.html
+++ b/default.html
@@ -28,6 +28,13 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/responsive.css">
 
+        <!-- Librarires -->
+        <script src="libraries/p5.js" type="text/javascript"></script>
+        <script src="libraries/p5.dom.js" type="text/javascript"></script>
+        <script src="libraries/p5.sound.js" type="text/javascript"></script>
+
+        <!-- <script src="js/sketch.js" type="text/javascript"></script> -->
+
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -56,10 +63,15 @@
                 <h2 id='project'> <span class="days">180</span> websites in <span class="days">180</span> [somewhat] days project.</h2>
             </div>
 
+            <!-- <div id="canvasDiv">
+              <canvas id="canvas" width="300" height="300"></canvas>
+            </div> -->
         </header>
 
         <section>
             <div class="container">
+                <h3><span class="days"> Day 040 &nbsp;</span><a href="http://athoug.xyz/p5-js-website/gallary.html" data-linktext="Generative Art" class="slide_from_bottom">Generative Art</a></h3>
+                <h3><span class="days"> Day 039 &nbsp;</span><a href="http://athoug.xyz/Trumpland-Game/" data-linktext="Trumpland" class="slide_from_bottom">Trumpland</a></h3>
                 <h3><span class="days"> Day 038 &nbsp;</span><a href="../day38/index.html" data-linktext="Simon" class="slide_from_bottom">Simon</a></h3>
                 <h3><span class="days"> Day 037 &nbsp;</span><a href="../day37/index.html" data-linktext="meh" class="slide_from_bottom">meh</a></h3>
                 <h3><span class="days"> Day 036 &nbsp;</span><a href="../day36/index.html" data-linktext="Motivation" class="slide_from_bottom">Motivation</a></h3>
@@ -104,7 +116,9 @@
         </section>
 
         <footer>
-            <p>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
+            <p>Athoug Alsougayer &copy; <span class="date">2016</span> &nbsp; &nbsp;&nbsp; &nbsp;<a href="default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
         </footer>
+
+        <script type="text/javascript" src="js/script.js"></script>
     </body>
 </html>
