--- a/default.html
+++ b/default.html
@@ -28,13 +28,6 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/responsive.css">
 
-        <!-- Librarires -->
-        <script src="libraries/p5.js" type="text/javascript"></script>
-        <script src="libraries/p5.dom.js" type="text/javascript"></script>
-        <script src="libraries/p5.sound.js" type="text/javascript"></script>
-
-        <!-- <script src="js/sketch.js" type="text/javascript"></script> -->
-
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -47,7 +40,7 @@
         </script>
     </head>
     <body>
-        <header>
+        <header id="header">
 
             <nav>
                 <ul>
@@ -121,5 +114,7 @@
         </footer>
 
         <script type="text/javascript" src="js/script.js"></script>
+        <script src="js/sketch.js" type="text/javascript"></script>
+
     </body>
 </html>
