--- a/day43/index.html
+++ b/day43/index.html
@@ -21,6 +21,10 @@
       <p id="date">date</p>
       <h2>Currancy</h2>
       <input type="text" id="topCurrancy" placeholder="10.25">
+      <select id="topCurrencySelector">
+        <option value="">USD</option>
+        <option value="">GBP</option>
+      </select>
     </div> <!-- top container of currancy -->
     <div class="btn">
       <p>
