Adding select UI

--- a/day43/index.html
+++ b/day43/index.html
@@ -34,6 +34,10 @@
     </div> <!-- swap currancy btn -->
     <div class="bottom">
       <input type="text" id="bottomCurrancy" placeholder="30.65">
+      <select id="bottomCurrencySelector">
+        <option value="">USD</option>
+        <option value="">GBP</option>
+      </select>
     </div> <!-- bottom container of currancy -->
   </div>
 
