--- a/day43/index.html
+++ b/day43/index.html
@@ -22,8 +22,8 @@
       <h2>Currancy</h2>
       <input type="text" id="topCurrancy" placeholder="10.25">
       <select id="topCurrencySelector">
-        <option value="">USD</option>
-        <option value="">GBP</option>
+        <!-- <option value="">USD</option> -->
+        <!-- <option value="">GBP</option> -->
       </select>
     </div> <!-- top container of currancy -->
     <div class="btn">
@@ -35,10 +35,13 @@
     <div class="bottom">
       <input type="text" id="bottomCurrancy" placeholder="30.65">
       <select id="bottomCurrencySelector">
-        <option value="">USD</option>
-        <option value="">GBP</option>
+        <!-- <option value="">USD</option> -->
+        <!-- <option value="">GBP</option> -->
       </select>
+
+        <div id="convert-btn"><p>CONVERT</p></div>
     </div> <!-- bottom container of currancy -->
+
   </div>
 
   <footer id='foot'>
