--- a/day43/index.html
+++ b/day43/index.html
@@ -26,7 +26,7 @@
         <!-- <option value="">GBP</option> -->
       </select>
     </div> <!-- top container of currancy -->
-    <div class="btn">
+    <div class="btn" id="swapper">
       <p>
         <i class="fa fa-long-arrow-up" aria-hidden="true"></i>
         <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
