--- a/day44/index.html
+++ b/day44/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Planetaria</title>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="css/master.css">
     <script type="text/javascript" src="js/script.js"></script>
   </head>
@@ -10,7 +11,11 @@
     <div class="container">
       <div class="sun"></div>
       <div class="Mercury-orbit">
-        <div class="Mercury"></div>
+        <div class="Mercury">
+          <div class="info">
+            <p>Mercury is the smallest and innermost planet in the Solar System. Its orbital period around the Sun of 88 days is the shortest of all the planets in the Solar System. It is named after the Roman deity Mercury, the messenger to the gods.</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
