--- a/day44/index.html
+++ b/day44/index.html
@@ -10,10 +10,18 @@
   <body>
     <div class="container">
       <div class="sun"></div>
-      <div class="Mercury-orbit">
+      <div class="Mercury-orbit"> <!-- Murcery -->
         <div class="Mercury">
-          <div class="info">
+          <div class="info" id="Mercury-info">
             <p>Mercury is the smallest and innermost planet in the Solar System. Its orbital period around the Sun of 88 days is the shortest of all the planets in the Solar System. It is named after the Roman deity Mercury, the messenger to the gods.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="Venus-orbit">
+        <div class="Venus">
+          <div class="info" id="Venus-info">
+            <p>Venus is the second planet from the Sun, orbiting it every 224.7 Earth days. It has no natural satellite. It is named after the Roman goddess of love and beauty. It is the second-brightest natural object in the night sky after the Moon</p>
           </div>
         </div>
       </div>
