--- a/day44/index.html
+++ b/day44/index.html
@@ -1,30 +1,57 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Planetaria</title>
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/master.css">
-    <script type="text/javascript" src="js/script.js"></script>
-  </head>
-  <body>
-    <div class="container">
-      <div class="sun"></div>
-      <div class="Mercury-orbit"> <!-- Murcery -->
-        <div class="Mercury">
-          <div class="info" id="Mercury-info">
-            <p>Mercury is the smallest and innermost planet in the Solar System. Its orbital period around the Sun of 88 days is the shortest of all the planets in the Solar System. It is named after the Roman deity Mercury, the messenger to the gods.</p>
-          </div>
+
+<head>
+  <meta charset="utf-8">
+  <title>Planetaria</title>
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+  <link rel="stylesheet" href="css/master.css">
+  <script type="text/javascript" src="js/script.js"></script>
+</head>
+
+<body>
+  <div class="container">
+    <div class="sun"></div>
+    <div class="Mercury-orbit">
+      <!-- Murcery -->
+      <div class="Mercury">
+        <div class="info" id="Mercury-info">
+          <p>Mercury is the smallest and innermost planet in the Solar System. Its orbital period around the Sun of 88 days is the shortest of all the planets in the Solar System. It is named after the Roman deity Mercury, the messenger to the gods.</p>
         </div>
       </div>
+    </div>
 
-      <div class="Venus-orbit">
-        <div class="Venus">
-          <div class="info" id="Venus-info">
-            <p>Venus is the second planet from the Sun, orbiting it every 224.7 Earth days. It has no natural satellite. It is named after the Roman goddess of love and beauty. It is the second-brightest natural object in the night sky after the Moon</p>
+    <div class="Venus-orbit">
+      <!-- Venus -->
+      <div class="Venus">
+        <div class="info" id="Venus-info">
+          <p>Venus is the second planet from the Sun, orbiting it every 224.7 Earth days. It has no natural satellite. It is named after the Roman goddess of love and beauty. It is the second-brightest natural object in the night sky after the Moon</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="Earth-orbit">
+      <!-- Earth -->
+      <div class="Earth">
+        <div class="moon-orbit">
+          <div class="moon"></div>
+          <div class="info" id="Earth-info">
+            <p>Earth otherwise known as the World or the Globe, is the third planet from the Sun and the only object in the Universe known to harbor life. It is the densest planet in the Solar System and the largest of the four terrestrial planets.</p>
           </div>
         </div>
       </div>
     </div>
-  </body>
+
+    <div class="Mars-orbit">
+      <!-- Venus -->
+      <div class="Mars">
+        <div class="info" id="Mars-info">
+          <p>Venus is the second planet from the Sun, orbiting it every 224.7 Earth days. It has no natural satellite. It is named after the Roman goddess of love and beauty. It is the second-brightest natural object in the night sky after the Moon</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</body>
+
 </html>
