--- a/day44/index.html
+++ b/day44/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Planetaria</title>
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
   <link rel="stylesheet" href="css/master.css">
   <script type="text/javascript" src="js/script.js"></script>
@@ -46,7 +47,7 @@
       <!-- Venus -->
       <div class="Mars">
         <div class="info" id="Mars-info">
-          <p>Venus is the second planet from the Sun, orbiting it every 224.7 Earth days. It has no natural satellite. It is named after the Roman goddess of love and beauty. It is the second-brightest natural object in the night sky after the Moon</p>
+          <p>Mars is the fourth planet from the Sun and the second-smallest planet in the Solar System. Named after the Roman god of war, it is often referred to as the "Red Planet" Mars can easily be seen from Earth with the naked eye.</p>
         </div>
       </div>
     </div>
