--- a/day44/index.html
+++ b/day44/index.html
@@ -44,10 +44,19 @@
     </div>
 
     <div class="Mars-orbit">
-      <!-- Venus -->
+      <!-- Mars -->
       <div class="Mars">
         <div class="info" id="Mars-info">
           <p>Mars is the fourth planet from the Sun and the second-smallest planet in the Solar System. Named after the Roman god of war, it is often referred to as the "Red Planet" Mars can easily be seen from Earth with the naked eye.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="Jupiter-orbit">
+      <!-- Jupiter -->
+      <div class="Jupiter">
+        <div class="info" id="Jupiter-info">
+          <p>Jupiter is the fifth planet from the Sun and the largest in the Solar System. Jupiter is primarily composed of hydrogen with a quarter of its mass being helium. Jupiter has been explored on several occasions by robotic spacecraft</p>
         </div>
       </div>
     </div>
