--- a/day44/index.html
+++ b/day44/index.html
@@ -61,6 +61,33 @@
       </div>
     </div>
 
+    <div class="Saturn-orbit">
+      <!-- Saturn -->
+      <div class="Saturn">
+        <div class="info" id="Saturn-info">
+          <p>Saturn is the sixth planet from the Sun and the second-largest in the Solar System, after Jupiter. It is a gas giant. Saturn is named after the Roman god of agriculture; its astronomical symbol (♄) represents the god's sickle.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="Uranus-orbit">
+      <!-- Uranus -->
+      <div class="Uranus">
+        <div class="info" id="Uranus-info">
+          <p>Uranus is the seventh planet from the Sun. It has the third-largest planetary radius the Solar System. Uranus is the only planet whose name is derived from a figure from Greek mythology, from the Latinised version of the Greek god of the sky Ouranos.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="Neptune-orbit">
+      <!-- Neptune -->
+      <div class="Neptune">
+        <div class="info" id="Neptune-info">
+          <p>Neptune is the eighth and farthest known planet from the Sun in the Solar System. It is named after the Roman god of the sea and has the astronomical symbol ♆, a stylised version of the god Neptune's trident.</p>
+        </div>
+      </div>
+    </div>
+
   </div>
 </body>
 
