--- a/default.html
+++ b/default.html
@@ -71,6 +71,7 @@
 
   <section>
     <div class="container">
+      <h3><span class="days"> Day 044 &nbsp;</span><a href="../day44/index.html" data-linktext="Planetaria" class="slide_from_bottom">Planetaria</a></h3>
       <h3><span class="days"> Day 043 &nbsp;</span><a href="../day43/index.html" data-linktext="Currancy Converter" class="slide_from_bottom">Currancy Converter</a></h3>
       <h3><span class="days"> Day 042 &nbsp;</span><a href="../day42/intro/index.html" data-linktext="Practice 1" class="slide_from_bottom">Practice 1</a> <a href="../day42/noiseBg/index.html" data-linktext="2" class="slide_from_bottom">2</a> <a href="../day42/index.html" data-linktext="Result" class="slide_from_bottom">Result</a></h3>
       <h3><span class="days"> Day 041 &nbsp;</span><a href="../day41/index.html" data-linktext="Happy" class="slide_from_bottom">Happy</a></h3>
