--- a/day44/index.html
+++ b/day44/index.html
@@ -12,6 +12,10 @@
 
 <body>
   <div class="container">
+    <div class="title">
+      <h1>PLANETARIA</h1>
+    </div>
+    <!-- Planets -->
     <div class="sun"></div>
     <div class="Mercury-orbit">
       <!-- Murcery -->
