--- a/day47/index.html
+++ b/day47/index.html
@@ -15,6 +15,11 @@
       <div class="hand hour-hand"></div>
       <div class="hand min-hand"></div>
       <div class="hand second-hand"></div>
+      <div class="circle"></div>
+      <div class="twelve dash"></div>
+      <div class="six dash"></div>
+      <div class="three dash"></div>
+      <div class="nine dash"></div>
     </div>
   </div>
 
