more style updates

--- a/day47/index.html
+++ b/day47/index.html
@@ -16,13 +16,18 @@
       <div class="hand min-hand"></div>
       <div class="hand second-hand"></div>
       <div class="circle"></div>
-      <div class="twelve dash"></div>
-      <div class="six dash"></div>
-      <div class="three dash"></div>
-      <div class="nine dash"></div>
+        <!-- <div class="twelve dash"></div>
+        <div class="six dash"></div>
+        <div class="three dash"></div>
+        <div class="nine dash"></div>
+        <div class="one dash"></div>
+        <div class="eight dash"></div> -->
     </div>
   </div>
 
+  <footer id='foot'>
+    <p id='footp'>Athoug Alsougayer &copy; 2017 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a> &nbsp;| &nbsp; <a href="http://athougcodesatnight.tumblr.com/" id='foota2'>blog</a></p>
+  </footer>
 </body>
 
 </html>
