--- a/day47/index.html
+++ b/day47/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>JS + CSS Clock</title>
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
   <link rel="stylesheet" href="css/master.css">
   <script type="text/javascript" src="js/script.js"></script>
 </head>
