--- a/default.html
+++ b/default.html
@@ -71,6 +71,7 @@
 
   <section>
     <div class="container">
+      <h3><span class="days"> Day 047 &nbsp;</span><a href="../day47/index.html" data-linktext="Analog Clock" class="slide_from_bottom">Analog Clock</a></h3>
       <h3><span class="days"> Day 046 &nbsp;</span><a href="../day46/index.html" data-linktext="KeyCode" class="slide_from_bottom">KeyCode</a></h3>
       <h3><span class="days"> Day 045 &nbsp;</span><a href="../day45/index.html" data-linktext="Drum Kit" class="slide_from_bottom">Drum Kit</a></h3>
       <h3><span class="days"> Day 044 &nbsp;</span><a href="../day44/index.html" data-linktext="Planetaria" class="slide_from_bottom">Planetaria</a></h3>
