--- a/day47/index.html
+++ b/day47/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>JS + CSS Clock</title>
+  <title>Analog Clock</title>
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
   <link rel="stylesheet" href="css/master.css">
   <script type="text/javascript" src="js/script.js"></script>
@@ -17,12 +17,19 @@
       <div class="hand min-hand"></div>
       <div class="hand second-hand"></div>
       <div class="circle"></div>
-        <!-- <div class="twelve dash"></div>
-        <div class="six dash"></div>
-        <div class="three dash"></div>
-        <div class="nine dash"></div>
-        <div class="one dash"></div>
-        <div class="eight dash"></div> -->
+      <div class="twelve dash"></div>
+      <div class="six dash"></div>
+      <div class="three dash"></div>
+      <div class="nine dash"></div>
+      <div class="one dash"></div>
+      <div class="eight dash"></div>
+      <div class="two dash"></div>
+      <div class="seven dash"></div>
+      <div class="four dash"></div>
+      <div class="five dash"></div>
+      <div class="eleven dash"></div>
+      <div class="ten dash"></div>
+      <div class="date">99</div>
     </div>
   </div>
 
