--- a/day48/index.html
+++ b/day48/index.html
@@ -46,7 +46,7 @@
       <label for="hue-rotate" class="label-style">Hue</label>
       <input id="hue-rotate" type="range" name="hue" min="0" max="360" value="0" data-sizing="deg">
 
-      <br>
+      <!-- <br>
 
       <label for="invert" class="label-style">Invert</label>
       <input id="invert" type="range" name="invert" min="0" max="100" value="0" data-sizing="%">
@@ -56,12 +56,12 @@
       <label for="opacity" class="label-style">Opacity</label>
       <input id="opacity" type="range" name="opacity" min="0" max="100" value="100" data-sizing="%">
 
-      <br>
+      <br> -->
 
-      <label for="exposure" class="label-style">Brightness</label>
+      <!-- <label for="exposure" class="label-style">Brightness</label>
       <input id="exposure" type="range" name="exposure" min="0" max="500" value="100" data-sizing="%">
 
-      <br>
+      <br> -->
 
       <!-- <label for="contrast" class="label-style">Contrast</label>
       <input id="contrast" type="range" name="contrast" min="0" max="500" value="100" data-sizing="%"> -->
