--- a/day49/index.html
+++ b/day49/index.html
@@ -28,7 +28,10 @@
       <div class="square"></div>
     </div>
 
-
+    <footer id='foot'>
+      <p id='footp'>Athoug Alsougayer &copy; 2017 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a> &nbsp;| &nbsp; <a href="http://athougcodesatnight.tumblr.com/" id='foota2'>blog</a></p>
+    </footer>
+    
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
