--- a/default.html
+++ b/default.html
@@ -71,6 +71,7 @@
 
   <section>
     <div class="container">
+      <h3><span class="days"> Day 049 &nbsp;</span><a href="../day49/index.html" data-linktext="RGB" class="slide_from_bottom">RGB</a></h3>
       <h3><span class="days"> Day 048 &nbsp;</span><a href="../day48/index.html" data-linktext="Photo Editing" class="slide_from_bottom">Photo Editing</a></h3>
       <h3><span class="days"> Day 047 &nbsp;</span><a href="../day47/index.html" data-linktext="Analog Clock" class="slide_from_bottom">Analog Clock</a></h3>
       <h3><span class="days"> Day 046 &nbsp;</span><a href="../day46/index.html" data-linktext="KeyCode" class="slide_from_bottom">KeyCode</a></h3>
