--- a/day50/index.html
+++ b/day50/index.html
@@ -17,15 +17,15 @@
 
     <section>
       <div class="html">
-
+        <textarea name="name" id="html"></textarea>
       </div>
 
       <div class="css">
-
+        <textarea name="name" id="css"></textarea>
       </div>
 
       <div class="js">
-
+        <textarea name="name" id="js"></textarea>
       </div>
 
       <div class="run">
