--- a/day51/index.html
+++ b/day51/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>ToDo</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100i,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/master.css">
   </head>
@@ -11,12 +12,13 @@
   <body>
 
     <div class="container">
-      <h1>To-do List</h1>
-      <input type="text" name="" value="">
+      <h1>To-do List <i class="fa fa-plus" aria-hidden="true"></i>
+</h1>
+      <input type="text" placeholder="Add New Todo">
       <ul>
-        <li><span>X</span> Being awesome</li>
-        <li><span>X</span> Drink Tea</li>
-        <li><span>X</span> Listen to music</li>
+        <li><span><i class="fa fa-trash-o" aria-hidden="true"></i></span> Being awesome</li>
+        <li><span><i class="fa fa-trash-o" aria-hidden="true"></i></span> Drink Tea</li>
+        <li><span><i class="fa fa-trash-o" aria-hidden="true"></i></span> Listen to music</li>
       </ul>
     </div>
 
