--- a/day51/index.html
+++ b/day51/index.html
@@ -12,16 +12,20 @@
   <body>
 
     <div class="container">
-      <h1>To-do List <i class="fa fa-plus" aria-hidden="true"></i>
-</h1>
+      <h1>Get <span class="black">Shit</span> Done. <i class="fa fa-plus" aria-hidden="true"></i>
+      </h1>
       <input type="text" placeholder="Add New Todo">
       <ul>
-        <li><span><i class="fa fa-trash-o" aria-hidden="true"></i></span> Being awesome</li>
+        <li><span><i class="fa fa-trash-o" aria-hidden="true"></i></span> Learn something new</li>
         <li><span><i class="fa fa-trash-o" aria-hidden="true"></i></span> Drink Tea</li>
         <li><span><i class="fa fa-trash-o" aria-hidden="true"></i></span> Listen to music</li>
+        <li><span><i class="fa fa-trash-o" aria-hidden="true"></i></span> daydream</li>
       </ul>
     </div>
 
+    <footer id='foot'>
+      <p id='footp'>Athoug Alsougayer &copy; 2017 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a> &nbsp;| &nbsp; <a href="http://athougcodesatnight.tumblr.com/" id='foota2'>blog</a></p>
+    </footer>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
   </body>
